[package]
name = "lily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.23.1"
chrono = "0.4.31"
walkdir = "2.4.0"
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite"]}
tokio = { version = "1.20.0", features = ["macros"]}
indicatif = "0.17.7"
